Add shower haiku

--- a/_posts/poetry/2025-02-15-suntimes.md
+++ b/_posts/poetry/2025-02-15-suntimes.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: "Sun times"
+title: "Suntimes"
 date: 2025-02-15
 category: poetry
 ---
 
-Suntime I wonder, 🎶
-How it would feel, being you - 🎶
-Bringing light to all 🎶
+Suntimes I wonder,  
+How it would feel, being you -  
+Bringing light to all  
 
