Update poem styling

--- a/_posts/poetry/2025-02-15-suntimes.md
+++ b/_posts/poetry/2025-02-15-suntimes.md
@@ -1,11 +1,11 @@
 ---
-layout: post
+layout: poem 
 title: "Suntimes"
 date: 2025-02-15
 category: poetry
 ---
 
 Suntimes I wonder,  
-How it would feel, being you -  
+How it would feel, being you &mdash;  
 Bringing light to all  
 
