Improve Rat 1 poem

--- a/_posts/poetry/2025-02-13-Rat-1.md
+++ b/_posts/poetry/2025-02-13-Rat-1.md
@@ -5,9 +5,17 @@ date: 2025-02-13
 categories: [poetry]
 ---
 
-A fat rat raised in New York,
-Was feasting on leftover pork,
-He explained at his companions behest,
-Why the pork in Chinatown was best,
-“All other preparations are a hard chew,
- All except this delicious Char Siu”
+
+A plump rat born and raised in New York,
+Enjoyed feasting on leftover pork,
+He explained at his dear friend's request,
+Why pork in Chinatown was *the* best,
+"Every other dish is a hard chew,
+All except this delicious Char Siu"
+
+[//]: # (A fat rat raised in New York,)
+[//]: # (Was feasting on leftover pork,)
+[//]: # (He explained at his companions behest,)
+[//]: # (Why the pork in Chinatown was best,)
+[//]: # ("All other preparations are a hard chew,)
+[//]: # (All except this delicious Char Siu")
