--- a/_posts/poetry/2025-02-17-Rat-2.md
+++ b/_posts/poetry/2025-02-17-Rat-2.md
@@ -3,7 +3,7 @@ layout: poem
 title: "A Rat"
 date: 2025-02-17
 categories: [poetry]
-published: false
+published: true
 ---
 
 A rat from the upstate town of Addison,
